--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,8 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+# These two flags need to be set to TRUE for AndroidX Operation. Currently,
+# I haven't figured this thing out so I plan on not using AndroidX.
+#android.useAndroidX = true
+#android.enableJetifier = true
