Preliminary changes for the battery plots
Added an IntentService to look for any change in Battery level. Add the
received value into the DB.
Then the graph activity can retrieve 500 rows and plot the battery
level.

To Do:
1. Update IntentService or something else to query battery status every
15/30 mins or so. BroadcastReceiver seems to be inefficient.
2. Add WorkerThread to query DB and add elements in the DB.
3. Add DB deletion call when the app upgrades.
4. Currently the rows are retrieved in ASC order. Change it to DESC.
5. Add axis to the graph and change the resolution in x-axis. Add title.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
         <activity android:name=".RecommendationActivity" />
         <activity android:name=".Graph" />
         <activity android:name=".Settings"></activity>
+        <service android:name=".MyBatteryIntentService"
+                 android:exported="false"></service>
     </application>
 
 </manifest>
