--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,4 @@ org.gradle.jvmargs=-Xmx1536m
 # I haven't figured this thing out so I plan on not using AndroidX.
 #android.useAndroidX = true
 #android.enableJetifier = true
+kotlin.code.style=official
