--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,10 @@ dependencies {
     implementation("android.arch.work:work-runtime:1.0.0-alpha10") {
         exclude group: 'com.google.guava', module: 'listenablefuture'
     }
-    implementation 'com.squareup.okhttp3:okhttp:3.3.0'
+    //implementation 'com.squareup.okhttp3:okhttp:3.3.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'io.github.lizhangqu:coreprogress:1.0.2'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
