Bunch of stuff, probably do not need all of it.  Trying to get things together

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
             <service android:name=".MyBatteryIntentService"
                  android:exported="false"></service>
         -->
-        <activity android:name=".ui.WirelessData.WifiActivity">
+        <activity android:name=".ui.WirelessDataFolder.WifiActivity">
         </activity>
     </application>
 
